Closed
Bug 385286
Opened 18 years ago
Closed 18 years ago
"WARNING: not supported for frames" trying to scroll over textarea
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha6
People
(Reporter: jruderman, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: regression)
Attachments
(1 file)
6.26 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Load data:text/html,<textarea></textarea>
2. Position the mouse cursor over the textarea.
3. Put two fingers on the trackpad and move them down (as if scrolling).
Result:
WARNING: not supported for frames: file /Users/jruderman/trunk/mozilla/layout/generic/nsFrame.cpp, line 543
I'm guessing this is a regression, because I don't remember seeing it before today.
Assignee | ||
Comment 1•18 years ago
|
||
The warning-less nsBoxFrame::AddRef/Release was removed in bug 381621,
so we reach nsFrame::AddRef/Release now, which warns.
Assignee: nobody → mats.palmgren
OS: Mac OS X → All
Hardware: PC → All
Assignee | ||
Comment 2•18 years ago
|
||
1. don't ref-count nsIScrollableViewProvider
Unrelated changes, but since I'm here:
2. use nsCOMPtr instead of nsRefPtr<nsIPresShell> (this was the last
remaining instantiation so we should save a few bytes)
3. remove an unused variable 'rootFrame' under DEBUG (kills a compile warning)
Attachment #269220 -
Flags: superreview?(roc)
Attachment #269220 -
Flags: review?(roc)
Attachment #269220 -
Flags: superreview?(roc)
Attachment #269220 -
Flags: superreview+
Attachment #269220 -
Flags: review?(roc)
Attachment #269220 -
Flags: review+
Assignee | ||
Comment 3•18 years ago
|
||
Checked in to trunk at 2007-06-23 00:39 PDT.
-> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha6
You need to log in
before you can comment on or make changes to this bug.
Description
•