Don't ref-count nsIScrollableViewProvider. b=385286 r+sr=roc